# dir2map

./: .gitignore  README.en.md  README.hi.md  README.md  pyproject.toml
src/dir2map/: main.py
src/dirtree/: main.py
